MacroAssemblerMIPS does not implement readCallTarget https://bugs.webkit.org/show_bug.cgi?id=73432

Patch by Chao-ying Fu <fu@mips.com> on 2011-12-01
Reviewed by Zoltan Herczeg.

* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::readCallTarget):
* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::readCallTarget):

Canonical link: https://commits.webkit.org/90130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101658 268f45cc-cd09-0410-ab3c-d52691b4dbfc